SF Primes/src/objects/Potluck_Dish__c.object
<CustomObject>
    <description>Potluck dish details</description>
    <fields>
        <fullName>Dish_Name__c</fullName>
        <description>Dish Name</description>
        <inlineHelpText>Name of the Dish</inlineHelpText>
        <label>Dish Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Veg__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is it a Veg dish or non-veg dish?</description>
        <label>Is Veg?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potluck_Dish_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Is it starter? dessert?....</description>
        <label>Potluck Dish Category</label>
        <referenceTo>Potluck_Item_Category__c</referenceTo>
        <relationshipLabel>Potluck Dishes</relationshipLabel>
        <relationshipName>Potluck_Dishes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Dish Quanity</description>
        <inlineHelpText>Quantity to serve the people</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Remaining Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Potluck Dish</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Dish_Name__c</columns>
        <columns>Is_Veg__c</columns>
        <columns>Potluck_Dish_Category__c</columns>
        <columns>Quantity__c</columns>
        <columns>Remaining_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD - {0000}</displayFormat>
        <label>Potluck Dish Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potluck Dishes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>